--- a/css/styles.css
+++ b/css/styles.css
@@ -4,10 +4,17 @@
 
 body {
     font-size: 0px;
+    background-color: rgba(0,0,0,0.25);
+    min-height: 100vh;
 }
 
 header {
     background-color: #717171;
+}
+
+main {
+    border: 1px solid rgba(0, 0, 0, 0.36);
+    width: 80%;
 }
 
 .menu {
@@ -16,13 +23,15 @@ header {
 }
 
 .menu__item {
+    padding-top: 1px;
     font-size: 18px;
     display: inline-block;
-    width: 150px;
-    height: 40px;
+    width: auto;
+    height: auto;
 }
 
 .menu__item a {
+    display: inline-block;
     padding: 20px;
     text-decoration: none;
     color: #ffffff;
