--- a/html-css/module-3/css/styles.css
+++ b/html-css/module-3/css/styles.css
@@ -1,6 +1,8 @@
-/** {*/
-/*outline: 1px solid red;*/
-/*}*/
+/*
+* {
+    outline: 1px solid red;
+}
+*/
 
 body {
     font-family: "Playfair Display", non-serif;
@@ -13,15 +15,6 @@ header {
     text-align: center;
 }
 
-h2 {
-    text-align: center;
-}
-
-ul {
-    padding: 0px;
-    font-size: 0px;
-}
-
 .menu-nav {
     margin: auto;
     padding-top: 1px;
@@ -32,9 +25,6 @@ ul {
 .menu-nav li {
     font-size: 18px;
     display: inline-block;
-    width: auto;
-    height: auto;
-    margin: auto;
 }
 
 .menu-nav a {
@@ -48,47 +38,103 @@ ul {
     outline: 1px solid #ffffff;
 }
 
-.wrapper-task1 {
-    background-color: rgba(80, 80, 80, 0.33);
-    margin: auto;
-    padding: 20px;
-    width: 600px;
-    border: 1px solid rgba(0, 0, 0, 0.36);
+section {
+    border: 1px solid rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
+    font-size: 0px;
+    font-family: "Playfair Display", non-serif;
+    min-height: 100vh;
+    margin: 57px;
+    padding: 1px 0px 20px;
 }
 
-.wrapper-task2 {
-    background-color: rgba(80, 80, 80, 0.33);
-    margin: auto;
-    box-sizing: border-box;
-    border: 1px solid rgba(0, 0, 0, 0.36);
-    width: 470px;
-    padding: 20px;
+section>header {
+    text-align: center;
+    background-color: rgb(255, 255, 255);
 }
 
-.wrapper-task3 {
-    background-color: rgba(80, 80, 80, 0.33);
-    margin: auto;
-    box-sizing: border-box;
-    border: 1px solid rgba(0, 0, 0, 0.36);
-    width: 960px;
+.menu-list {
+    margin: auto auto 54px auto;
+    padding-left: 0px;
 }
 
-.wrapper-task4 {
-    background-color: rgba(80, 80, 80, 0.33);
-    margin: auto;
-    box-sizing: border-box;
-    border: 1px solid rgba(0, 0, 0, 0.36);
-    padding-left: 40px;
-    font-size: 18px;
-    width: 300px;
-}
-
-.wrapper-task3 li {
-    box-sizing: border-box;
-    padding: 20px;
+.menu-list li{
     display: inline-block;
-    width: 470px;
+    text-decoration: none;
+    margin-right: 56px;
+}
+
+.menu-list li:last-of-type {
+    margin: 0;
+}
+
+.menu-list a {
+display: inline-block;
+text-decoration: none;
+text-transform: uppercase;
+vertical-align: baseline;
+width: 113px;
+height: auto;
+padding: 18px 0;
+font-size: 14px;
+line-height: 24px;
+color: rgb(98, 98, 98);
+}
+
+.menu-list a:hover {
+    color: rgb(3, 169, 244);
+}
+
+.item-list {
+margin: auto auto 38px auto;
+width: 903px;
+padding: 0px;
+}
+
+.item-list li {
+display: inline-block;
+width: 421px;
+vertical-align: top;
+}
+
+.item-list li:nth-child(2n){
+margin-left: 61px;
+}
+
+.item-list__theme {
+font-family: "Ubuntu";
+font-size: 14px;
+line-height: 17px;
+color: rgb(180, 173, 158);
+}
+
+.item-list__title {
+font-size: 30px;
+line-height: 36px;
+color: rgb(98, 98, 98);
+}
+
+.item-list__text {
+font-size: 14px;
+line-height: 24px;
+color: rgb(98, 98, 98);
+}
+
+.load-button {
+    text-align: center;
+    font-size: 20px;
+    line-height: 24px;
+}
+
+.load-button button {
+    background-color: rgb(255, 255, 255); /* Green */
+    border: 1px solid rgb(98, 98, 98);
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
     font-size: 16px;
+    width: 164px;
+    height: 60px;
 }
 
 .visually-hidden:not(:focus):not(:active),
@@ -108,17 +154,3 @@ input[type="radio"].visually-hidden {
     clip: rect(0 0 0 0);
     overflow: hidden;
 }
-
-.article__title {
-    font-size: 24px;
-    font-weight: bold;
-}
-
-.article__theme {
-    color: rgba(0, 0, 0, 0.52);
-}
-
-.article__text {
-}
-
-
