--- a/html-css/module-3/css/styles.css
+++ b/html-css/module-3/css/styles.css
@@ -97,8 +97,8 @@ width: 421px;
 vertical-align: top;
 }
 
-.item-list li:nth-child(2n){
-margin-left: 61px;
+.item-list li:nth-child(2n-1){
+margin-right: 61px;
 }
 
 .item-list__theme {
