--- a/html-css/module-3/css/styles.css
+++ b/html-css/module-3/css/styles.css
@@ -135,6 +135,7 @@ color: rgb(98, 98, 98);
     font-size: 16px;
     width: 164px;
     height: 60px;
+    cursor: pointer;
 }
 
 .visually-hidden:not(:focus):not(:active),
