--- a/css/styles.css
+++ b/css/styles.css
@@ -1,42 +1,66 @@
-/** {*/
-/*outline: 1px solid red;*/
-/*}*/
-
 body {
-    font-size: 0px;
+    font-family: "Playfair Display", non-serif;
+    font-size: 16px;
     background-color: rgba(0,0,0,0.25);
-    min-height: 100vh;
 }
 
 header {
     background-color: #717171;
-}
-
-main {
-    border: 1px solid rgba(0, 0, 0, 0.36);
-    width: 80%;
-}
-
-.menu {
-    margin: auto;
     text-align: center;
 }
 
-.menu__item {
+.menu-nav {
+    margin: auto;
     padding-top: 1px;
-    font-size: 18px;
-    display: inline-block;
-    width: auto;
-    height: auto;
+    padding-left: 0px;
+    text-align: center;
 }
 
-.menu__item a {
+.menu-nav li {
+    font-size: 18px;
     display: inline-block;
-    padding: 20px;
+}
+
+.menu-nav a {
+    display: inline-block;
+    padding: 10px 20px;
     text-decoration: none;
     color: #ffffff;
 }
-.menu__item a:hover {
+.menu-nav a:hover {
     background-color: #555555;
     outline: 1px solid #ffffff;
+}
+
+section {
+    font-family: Serif;
+    border: 1px solid rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
+    font-size: 14px;
+    font-family: "Playfair Display", non-serif;
+    min-height: 100vh;
+    margin: 57px;
+    padding: 1px 0px 20px;
+}
+section>header {
+    text-align: left;
+    background-color: rgb(255, 255, 255);
+}
+
+.visually-hidden:not(:focus):not(:active),
+input[type="checkbox"].visually-hidden,
+input[type="radio"].visually-hidden {
+    position: absolute;
+
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+
+    white-space: nowrap;
+
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
 }
