--- a/html-css/module-4/add-tasks/css/styles.css
+++ b/html-css/module-4/add-tasks/css/styles.css
@@ -3,7 +3,7 @@
 /*}*/
 
 body {
-    font-family: "Playfair Display", non-serif;
+    font-family: "Playfair Display", sans-serif;
     font-size: 16px;
     background-color: rgba(0,0,0,0.25);
 }
@@ -41,10 +41,11 @@ main {
     padding: 10px 20px;
     text-decoration: none;
     color: #ffffff;
+    border: 1px solid transparent;
 }
 .menu-nav a:hover {
     background-color: #555555;
-    outline: 1px solid #ffffff;
+    border: 1px solid #ffffff;
 }
 
 .wrapper-task1 {
@@ -179,7 +180,7 @@ ul {
 
 .wrapper-task4 li::before {
     display: inline-block;
-    content: counter(list-item);
+    content: counter(list-item, upper-roman);
     width: 40px;
     height: 40px;
     vertical-align: middle;
