--- a/html-css/module-4/css/styles.css
+++ b/html-css/module-4/css/styles.css
@@ -1,52 +1,3 @@
-body {
-    font-family: "Playfair Display", non-serif;
-    font-size: 16px;
-    background-color: rgba(0,0,0,0.25);
-}
-
-header {
-    background-color: #717171;
-    text-align: center;
-}
-
-.menu-nav {
-    margin: auto;
-    padding-top: 1px;
-    padding-left: 0px;
-    text-align: center;
-}
-
-.menu-nav li {
-    font-size: 18px;
-    display: inline-block;
-}
-
-.menu-nav a {
-    display: inline-block;
-    padding: 10px 20px;
-    text-decoration: none;
-    color: #ffffff;
-}
-.menu-nav a:hover {
-    background-color: #555555;
-    outline: 1px solid #ffffff;
-}
-
-section {
-    font-family: Serif;
-    border: 1px solid rgb(0, 0, 0);
-    background-color: rgb(255, 255, 255);
-    font-size: 14px;
-    font-family: "Playfair Display", non-serif;
-    min-height: 100vh;
-    margin: 57px;
-    padding: 1px 0px 20px;
-}
-section>header {
-    text-align: left;
-    background-color: rgb(255, 255, 255);
-}
-
 .visually-hidden:not(:focus):not(:active),
 input[type="checkbox"].visually-hidden,
 input[type="radio"].visually-hidden {
@@ -63,4 +14,56 @@ input[type="radio"].visually-hidden {
     clip-path: inset(100%);
     clip: rect(0 0 0 0);
     overflow: hidden;
+}
+
+.clearfix::after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+body {
+    padding: 30px 100px;
+}
+
+.menu-nav {
+}
+
+.site-logo {
+    margin-right: 40px;
+    float: left;
+    text-decoration: none;
+    color: #626262;
+    font-size: 30px;
+    line-height: 32px;
+    text-transform: uppercase;
+}
+
+.site-logo::first-letter {
+    color: #1abc9c;
+}
+
+.menu-nav__list {
+    padding: 9px;
+}
+
+.menu-nav__list li {
+    float: right;
+    list-style: none;
+    font-size: 14px;
+    line-height: 14px;
+    color: #0f0101;
+    text-transform: uppercase;
+}
+
+.menu-nav__list li:not(:first-of-type) {
+    margin-right: 40px;
+}
+
+.menu-nav__list li:hover {
+    color: #1abc9c;
+}
+
+.item-list li {
+    float: left;
 }
