--- a/html-css/module-4/css/styles.css
+++ b/html-css/module-4/css/styles.css
@@ -1,3 +1,6 @@
+
+/*Global rules*/
+
 .visually-hidden:not(:focus):not(:active),
 input[type="checkbox"].visually-hidden,
 input[type="radio"].visually-hidden {
@@ -23,10 +26,23 @@ input[type="radio"].visually-hidden {
 }
 
 body {
-    padding: 30px 100px;
+    font-family: "Roboto";
 }
 
-.menu-nav {
+h2::after {
+    margin: 20px auto 30px;
+    display: block;
+    content: '';
+    width: 164px;
+    height: 7px;
+    background-color: #19bb9b;
+}
+
+/*Header*/
+
+header {
+    margin: 40px auto 100px;
+    max-width: 1300px;
 }
 
 .site-logo {
@@ -44,16 +60,18 @@ body {
 }
 
 .menu-nav__list {
-    padding: 9px;
 }
 
 .menu-nav__list li {
+    display: inline-block;
     float: right;
     list-style: none;
-    font-size: 14px;
-    line-height: 14px;
-    color: #0f0101;
-    text-transform: uppercase;
+    font-size: 24px;
+    line-height: 24px;
+    color: rgb(0,0,0);
+    font-family: "Open Sans";
+    font-weight: bold;
+    text-align: right;
 }
 
 .menu-nav__list li:not(:first-of-type) {
@@ -62,8 +80,157 @@ body {
 
 .menu-nav__list li:hover {
     color: #1abc9c;
+    cursor: pointer;
 }
 
+/*BODY*/
+
+.item-list,
+.news-list {
+    padding: 0;
+}
+
+h2 {
+    letter-spacing: -1px;
+    font-size: 48px;
+    line-height: 48px;
+    text-align: center;
+}
+
+/*PRODUCT LIST*/
+
+.wrapper-products {
+margin: auto;
+width: 1112px;
+}
+
+.wrapper-products h2 {
+    color: rgb(81,81,81);
+}
+
+
 .item-list li {
+position: relative;
+float: left;
+list-style: none;
+width: 255px;
+height: 322px;
+background-color: #e9effd;
+}
+
+.item-list li:not(:nth-child(4n)) {
+margin-right: 30px;
+}
+
+.item-list a {
+    text-decoration: none;
+}
+
+.item-list li:nth-child(-n + 4) {
+    margin-bottom: 30px;
+}
+
+.item-list li:nth-child(n + 5) {
+    margin-bottom: 100px;
+}
+
+.item-list p {
+    margin: 0;
+    padding-left: 20px;
+    box-sizing: border-box;
+    position: absolute;
+    bottom: 0;
+    width: 255px;
+    height: 40px;
+    background-color: #323232;
+    font-size: 18px;
+    line-height: 40px;
+    color: rgb(255,255,255);
+    text-transform: uppercase;
+}
+
+.item-list li:hover p {
+    background-color: #1abc9c;
+}
+
+
+
+
+.item-list span {
+    display: inline-block;
+    float: right;
+    width: 54px;
+    height: 40px;
+    background-color: #8c8c8c;
+    font-size: 18px;
+    line-height: 40px;
+    color: rgb(255,255,255);
+    text-align: center;
+}
+
+.item-list li:hover span {
+    background-color: #7fd9c7;
+}
+
+/*NEWS LIST*/
+
+.wrapper-news {
+    margin: auto;
+    width: 1112px;
+}
+
+.wrapper-news h2 {
+    color: rgb(85,82,82);
+}
+
+.news-list li {
+    list-style: none;
     float: left;
+    width: 347px;
+    height: 262px;
+    font-family: "Open Sans";
+}
+
+.news-list h3 {
+    font-size: 18px;
+    line-height: 26px;
+    color: rgb(85,82,82);
+    font-weight: bold;
+}
+
+.news-list h3::after {
+    display: block;
+    margin: 10px 0 30px;
+    content: '';
+    width: 136px;
+    height: 3px;
+    background-color: #4dc5ab;
+}
+
+.news-list p {
+    font-size: 14px;
+    line-height: 26px;
+    color: rgb(85,82,82);
+}
+
+.news-list li:not(:nth-child(3n)) {
+    margin-right: 30px;
+}
+
+.wrapper-news button {
+    border-color: transparent;
+    width: 160px;
+    height: 51px;
+    border-radius: 3px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.39);
+    background-color: #4dc5ab;
+    font-size: 16px;
+    line-height: 26px;
+    color: rgb(255,255,255);
+    text-align: center;
+    cursor: pointer;
+}
+
+.wrapper-news button:hover {
+    opacity: 0.5;
 }
