--- a/html-css/module-4/add-tasks/css/styles.css
+++ b/html-css/module-4/add-tasks/css/styles.css
@@ -217,3 +217,23 @@ input[type="radio"].visually-hidden {
     clip: rect(0 0 0 0);
     overflow: hidden;
 }
+
+.back-button {
+    text-decoration: none;
+    color: #b0b8b9;
+    position: fixed;
+    bottom: 50px;
+    right: 50px;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    background-color: #555555;
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12), 0 3px 1px -2px rgba(0,0,0,.2);
+    text-align: center;
+    line-height: 60px;
+}
+
+.back-button:hover {
+    background-color: #717171;
+    color: #ffffff;
+}
