--- a/html-css/module-4/css/styles.css
+++ b/html-css/module-4/css/styles.css
@@ -27,6 +27,7 @@ input[type="radio"].visually-hidden {
 
 body {
     font-family: "Roboto";
+    padding-bottom: 40px;
 }
 
 h2::after {
@@ -42,7 +43,7 @@ h2::after {
 
 header {
     margin: 40px auto 100px;
-    max-width: 1300px;
+    max-width: 1120px;
 }
 
 .site-logo {
@@ -66,12 +67,13 @@ header {
     display: inline-block;
     float: right;
     list-style: none;
-    font-size: 24px;
-    line-height: 24px;
+    font-size: 14px;
+    line-height: 14px;
     color: rgb(0,0,0);
     font-family: "Open Sans";
     font-weight: bold;
     text-align: right;
+    text-transform: uppercase;
 }
 
 .menu-nav__list li:not(:first-of-type) {
@@ -91,10 +93,12 @@ header {
 }
 
 h2 {
+    margin: 0;
     letter-spacing: -1px;
     font-size: 48px;
     line-height: 48px;
     text-align: center;
+    text-transform: uppercase;
 }
 
 /*PRODUCT LIST*/
@@ -187,7 +191,6 @@ margin-right: 30px;
     list-style: none;
     float: left;
     width: 347px;
-    height: 262px;
     font-family: "Open Sans";
 }
 
@@ -233,4 +236,26 @@ margin-right: 30px;
 
 .wrapper-news button:hover {
     opacity: 0.5;
+}
+
+/*HOME*/
+
+.back-button {
+    text-decoration: none;
+    color: #b0b8b9;
+    position: fixed;
+    bottom: 50px;
+    right: 50px;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    background-color: #555555;
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12), 0 3px 1px -2px rgba(0,0,0,.2);
+    text-align: center;
+    line-height: 60px;
+}
+
+.back-button:hover {
+    background-color: #717171;
+    color: #ffffff;
 }
