--- a/html-css/module-4/css/styles.css
+++ b/html-css/module-4/css/styles.css
@@ -67,22 +67,26 @@ header {
     display: inline-block;
     float: right;
     list-style: none;
-    font-size: 14px;
-    line-height: 14px;
-    color: rgb(0,0,0);
-    font-family: "Open Sans";
-    font-weight: bold;
     text-align: right;
-    text-transform: uppercase;
 }
 
 .menu-nav__list li:not(:first-of-type) {
     margin-right: 40px;
 }
 
-.menu-nav__list li:hover {
+.menu-nav__list li:hover > a {
     color: #1abc9c;
     cursor: pointer;
+}
+
+.menu-nav__list a {
+    text-decoration: none;
+    font-size: 14px;
+    line-height: 14px;
+    color: rgb(0,0,0);
+    font-family: "Open Sans";
+    font-weight: bold;
+    text-transform: uppercase;
 }
 
 /*BODY*/
