--- a/html-css/module-7/add-tasks/css/styles.css
+++ b/html-css/module-7/add-tasks/css/styles.css
@@ -9,7 +9,7 @@ body {
 }
 
 header {
-    background-color: #717171;
+    background-color: #2f4a71;
     text-align: center;
 }
 
@@ -35,11 +35,11 @@ h2 {
     display: inline-block;
     padding: 10px 20px;
     text-decoration: none;
-    color: #ffffff;
+    color: #7199ff;
 }
 .menu-nav a:hover {
-    background-color: #555555;
-    outline: 1px solid #ffffff;
+    background-color: #1d2055;
+    outline: 1px solid #7e9eff;
 }
 
 /*FIRST TASK*/
@@ -48,61 +48,38 @@ h2 {
     background-color: rgba(80, 80, 80, 0.33);
     margin: auto;
     padding: 20px;
-    width: 805px;
+    width: 495px;
     border: 1px solid rgba(0, 0, 0, 0.36);
 }
 
-.wrapper-task1 ul {
-    display: flex;
-    flex-wrap: wrap;
-
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-.wrapper-task1 li {
-    width: 255px;
-    height: 325px;
-    background: #2b2d42;
-    color: #d4dcdd;
-}
-
-.wrapper-task1 li:not(:nth-child(3n)) {  margin-right: 20px;}
-.wrapper-task1 li:not(:nth-last-child(-n + 3)) {  margin-bottom: 40px;}
-
-/*FIRST TASK v1.1*/
-
-.wrapper-task1-1 {
-    background-color: rgba(80, 80, 80, 0.33);
+table {
+    border-collapse: collapse;
     margin: auto;
-    padding: 20px;
-    width: 805px;
-    border: 1px solid rgba(0, 0, 0, 0.36);
+    font-size: 20px;
+    background-color: #ffffff;
 }
 
-.outer,
-.inner {
-    display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 0;
+.price-list caption {
+    font-weight: bold;
+    margin-bottom: 10px;
+    font-size: 25px;
 }
 
-.outer {
-    flex-wrap: wrap;
+.price-list th {
+    background-color: #444444;
+    color: #ffffff;
+    font-weight: bold;
 }
 
-.inner li {
-    width: 255px;
-    height: 325px;
-    background: #2b2d42;
-    color: #d4dcdd;
+.price-list th,
+.price-list td {
+    border: 2px solid #444444;
+    padding: 10px;
 }
 
-.outer>li:not(:last-of-type) {  margin-bottom: 40px;}
-.inner li:not(:nth-child(3n)) {  margin-right: 20px;}
-
+.price-list td:nth-child(1) {
+    text-transform: uppercase;
+}
 /*SECOND TASK*/
 
 .wrapper-task2 {
@@ -110,68 +87,8 @@ h2 {
     margin: auto;
     box-sizing: border-box;
     border: 1px solid rgba(0, 0, 0, 0.36);
-    width: 340px;
+    width: 640px;
     padding: 20px;
-}
-
-.social-card {
-    box-sizing: border-box;
-    width: 300px;
-    padding: 10px;
-    border: 1px solid black;
-    box-shadow: rgba(0, 0, 0, 0.1) 1px 1px 2px 2px;
-    text-align: center;
-    background-color: #717171;
-    color: #cdcdcd;
-}
-
-.social-card:hover {
-    box-shadow: rgba(0, 0, 0, 0.2) 2px 2px 5px 5px;
-}
-
-.social-card a {
-    display: block;
-    background: #2b2d42;
-    width: 280px;
-    height: 360px;
-    margin: auto;
-    text-decoration: none;
-    color: white;
-    transition: transform 2s;
-}
-
-.social-card a:hover {
-    transition: transform 0.2s;
-    transform: rotate(5deg);
-}
-
-.card-title {
-    transition: transform 2s, color 3s;
-    font-size: 26px;}
-.card-descr {  font-size: 16px;}
-
-.card-title:hover {
-    transition: transform 0.2s, color 0.3s;
-    transform: scale(1.15, 1.15);
-    color: #ffffff;
-}
-
-.social-card button {
-    text-decoration: none;
-    background-color: #555555;
-    width: 75px;
-    padding: 10px;
-    border: 1px solid rgba(0, 0, 0, 0.36);
-    color: #b0b8b9;
-    text-align: center;
-    transition: color 3s, width 2s, background 2s;
-}
-
-.social-card button:hover {
-    transition: color 0.3s, width 0.2s, background 0.2s;
-    width: 100%;
-    background: #626262;
-    color: #ffffff;
 }
 
 .visually-hidden:not(:focus):not(:active),
