module 9 add tasks done

--- a/html-css/module-8/add-tasks/css/styles.css
+++ b/html-css/module-8/add-tasks/css/styles.css
@@ -304,5 +304,5 @@ img {
     .wrapper-box,
     .red {width: 100%;}
     .green {width: 42%;}
-    .blue {width: 56.7%;
+    .blue {width: 56.7%;}
 }
