--- a/html-css/module-8/css/styles.css
+++ b/html-css/module-8/css/styles.css
@@ -166,6 +166,12 @@ header {
 .partner-card:nth-child(3) > picture::after {background: #1bd7ad url("../img/icons/cup.svg") no-repeat center;}
 .partner-card:nth-child(4) > picture::after {background: #4e72db url("../img/icons/plane.svg") no-repeat center;}
 
+@media screen  and (min-width: 320px) and (max-width: 340px) {
+    .content-page,
+    header {
+        width: 100%;}
+}
+
 @media screen and (min-width: 768px) {
     body {background: #1a1915 url("../img/background/background-tablet.png") no-repeat top left;}
     main {padding-bottom: 39px;}
@@ -221,11 +227,6 @@ header {
 @media screen  and (min-width: 768px) and (max-width: 788px) {
     header {
         width: 100%;}
-    .content-page,
-    .partner-list {
-        width: 80%;
-        margin: auto;
-    }
 }
 
 @media screen  and (min-width: 940px) {
