--- a/html-css/module-8/css/styles.css
+++ b/html-css/module-8/css/styles.css
@@ -251,3 +251,9 @@ header {
         width: 100%;
     }
 }
+
+@media screen  and (min-width: 1440px) {
+    body {
+        background-size: contain;
+    }
+}
