--- a/html-css/module-8/css/styles.css
+++ b/html-css/module-8/css/styles.css
@@ -26,6 +26,7 @@ ul {
 
 a, a:hover {
     text-decoration: none;
+    transition: all 1s;
 }
 
 body {
@@ -64,10 +65,10 @@ header {
     padding-top: 7px;
     border: 2px solid transparent;
     color: #ffffff;
+    border-radius: 18px;
 }
 
-.nav-list li:nth-child(2) a {
-    border-radius: 18px;
+.nav-list__item:nth-child(2) a {
     border-color: #ffffff;
 }
 
@@ -97,6 +98,7 @@ header {
     height: 40px;
     margin: 0 auto 105px;
     padding-top: 10px;
+    border: 2px solid transparent;
     border-radius: 20px;
     background-color: #ff4d4f;
     text-align: center;
@@ -148,8 +150,14 @@ header {
     color: #FF4E50;
 }
 
-.partner-card > picture { position: relative;}
-.partner-card > picture::after {
+.partner-card picture,
+.partner-card picture::after,
+.partner-card img {
+    position: relative;
+    transition: all 1s, box-shadow 0s;
+}
+.partner-card:nth-child(4) > picture::after {transition: all 1s, background-position 3s;}
+.partner-card picture::after {
     content: '';
     display: block;
     position: absolute;
@@ -157,15 +165,147 @@ header {
     right: -3px;
     width: 33px;
     height: 33px;
-    background: #ff4e50 url("../img/icons/tv.svg") no-repeat center;
     border: 3px solid #ffffff;
     border-radius: 50%;
 }
-
+.partner-card:nth-child(1) > picture::after {background: #ff4e50 url("../img/icons/tv.svg") no-repeat center;}
 .partner-card:nth-child(2) > picture::after {background: #ffa407 url("../img/icons/flask.svg") no-repeat center;}
 .partner-card:nth-child(3) > picture::after {background: #1bd7ad url("../img/icons/cup.svg") no-repeat center;}
 .partner-card:nth-child(4) > picture::after {background: #4e72db url("../img/icons/plane.svg") no-repeat center;}
 
+/*HOVER AND ANIMATION*/
+
+header a:hover {color: #ff4d4f; }
+.nav-list__item:nth-child(2) a:hover, .go-link:hover {border-color: #ff4d4f;}
+a.go-link:hover {background-color: #ffffff;}
+a.see-more:hover {
+    background-color: #FF4E50;
+    color: #ffffff;
+}
+.partner-card:hover img,
+.partner-card:hover picture::after {
+    bottom: 5px;
+    right: -7px;
+    box-shadow: 0 5px 17px 0 rgba(0,0,0,.5), 0 2px 4px 0 rgba(0,0,0,.12), 0 3px 1px -2px rgba(0,0,0,.2);
+    background-position-y: 8px;
+}
+/*.partner-card:nth-child(4) > picture:hover::after {background-position: 33px -15px;}*/
+
+@keyframes planeActive {
+    0% {
+        bottom: 0;
+        right: -3px;
+        transform: rotateZ(0); translate(50%,50%);
+    }
+    5.88% {
+        bottom: 10px;
+        right: -9px;
+        transform: rotateZ(-0.0588turn); translate(50%,50%);
+    }
+    11.76% {
+        bottom: 47px;
+        right: -18px;
+        transform: rotateZ(-0.1176turn); translate(50%,50%);
+    }
+    17.64% {
+        bottom: 72px;
+        right: -9px;
+        transform: rotateZ(-0.1764turn); translate(50%,50%);
+    }
+    23.52% {
+        bottom: 89px;
+        right: -3px;
+        transform: rotateZ(-0.2352turn); translate(50%,50%);
+    }
+    29.41% {
+        bottom: 99px;
+        right: 9px;
+        transform: rotateZ(-0.2941turn); translate(50%,50%);
+    }
+    35.29% {
+        bottom: 109px;
+        right: 45px;
+        transform: rotateZ(-0.3529turn); translate(50%,50%);
+    }
+    41.17% {
+        bottom: 99px;
+        right: 72px;
+        transform: rotateZ(-0.4117turn); translate(50%,50%);
+    }
+    47.05% {
+        bottom: 89px;
+        right: 88px;
+        transform: rotateZ(-0.4705turn); translate(50%,50%);
+    }
+    52.94% {
+        bottom: 72px;
+        right: 92px;
+        transform: rotateZ(-0.5294turn); translate(50%,50%);
+    }
+    58.82% {
+        bottom: 47px;
+        right: 99px;
+        transform: rotateZ(-0.5882turn); translate(50%,50%);
+    }
+    64.7% {
+        bottom: 10px;
+        right: 93px;
+        transform: rotateZ(-0.647turn); translate(50%,50%);
+    }
+    70.58% {
+        bottom: 0;
+        right: 88px;
+        transform: rotateZ(-0.7058turn); translate(50%,50%);
+    }
+    76.47% {
+        bottom: -8px;
+        right: 72px;
+        transform: rotateZ(-0.7647turn); translate(50%,50%);
+    }
+    82.35% {
+        bottom: -18px;
+        right: 45px;
+        transform: rotateZ(-0.8235turn); translate(50%,50%);
+    }
+    88.23% {
+        bottom: -9px;
+        right: 9px;
+        transform: rotateZ(-0.8823turn); translate(50%,50%);
+    }
+    94.11% {
+        bottom: -2px;
+        right: 0;
+        transform: rotateZ(-0.9411turn); translate(50%,50%);
+    }
+    100% {
+        bottom: 0;
+        right: -3px;
+        transform: rotateZ(-1turn);
+    }
+}
+
+@keyframes planeHover {
+    0% {
+        background-position: center;
+    }
+    50% {
+        background-position: 33px -18px;
+    }
+    51% {
+        background-position: -33px 18px;
+    }
+    100% {
+        background-position: center;
+    }
+}
+
+.partner-card:nth-child(4) > picture:hover::after {
+    animation: planeHover 2s ease-in-out 1;
+}
+.partner-card:nth-child(4) > picture:active::after {
+    animation: planeActive 2s ease-in-out 1;
+}
+/*MEDIA BRAKE POINTS*/
 @media screen  and (min-width: 320px) and (max-width: 340px) {
     .content-page,
     header {
@@ -228,6 +368,7 @@ header {
     header {
         width: 100%;}
 }
+
 
 @media screen  and (min-width: 940px) {
     body {background: #1a1915 url("../img/background/background-desktop.png") no-repeat top;}
