--- a/html-css/module-8/css/styles.css
+++ b/html-css/module-8/css/styles.css
@@ -26,6 +26,7 @@ ul {
 
 a, a:hover {
     text-decoration: none;
+    transition: all 1s;
 }
 
 body {
@@ -64,10 +65,10 @@ header {
     padding-top: 7px;
     border: 2px solid transparent;
     color: #ffffff;
+    border-radius: 18px;
 }
 
-.nav-list li:nth-child(2) a {
-    border-radius: 18px;
+.nav-list__item:nth-child(2) a {
     border-color: #ffffff;
 }
 
@@ -97,6 +98,7 @@ header {
     height: 40px;
     margin: 0 auto 105px;
     padding-top: 10px;
+    border: 2px solid transparent;
     border-radius: 20px;
     background-color: #ff4d4f;
     text-align: center;
@@ -148,8 +150,15 @@ header {
     color: #FF4E50;
 }
 
-.partner-card > picture { position: relative;}
-.partner-card > picture::after {
+.partner-card picture,
+.partner-card picture::after,
+.partner-card img {
+    position: relative;
+    transition: all 1s;
+    cursor: pointer;
+}
+.partner-card:nth-child(4) > picture::after {transition: all 1s, background-position 3s;}
+.partner-card picture::after {
     content: '';
     display: block;
     position: absolute;
@@ -157,14 +166,229 @@ header {
     right: -3px;
     width: 33px;
     height: 33px;
-    background: #ff4e50 url("../img/icons/tv.svg") no-repeat center;
     border: 3px solid #ffffff;
     border-radius: 50%;
 }
-
+.partner-card:nth-child(1) > picture::after {background: #ff4e50 url("../img/icons/tv.svg") no-repeat center;}
 .partner-card:nth-child(2) > picture::after {background: #ffa407 url("../img/icons/flask.svg") no-repeat center;}
 .partner-card:nth-child(3) > picture::after {background: #1bd7ad url("../img/icons/cup.svg") no-repeat center;}
 .partner-card:nth-child(4) > picture::after {background: #4e72db url("../img/icons/plane.svg") no-repeat center;}
+
+/*HOVER AND ANIMATION*/
+
+header a:hover {color: #ff4d4f; }
+.nav-list__item:nth-child(2) a:hover, .go-link:hover {border-color: #ff4d4f;}
+a.go-link:hover {background-color: #ffffff;}
+a.see-more:hover {
+    background-color: #FF4E50;
+    color: #ffffff;
+}
+.partner-card picture:hover img,
+.partner-card picture:hover::after {
+    transform: translate(14%, -12%);
+    /*    bottom: 5px;
+    right: -7px;*/
+    box-shadow: 0 5px 17px 0 rgba(0,0,0,.5), 0 2px 4px 0 rgba(0,0,0,.12), 0 3px 1px -2px rgba(0,0,0,.2);
+}
+/*.partner-card:nth-child(4) > picture:hover::after {background-position: 33px -15px;}*/
+
+
+
+/*@keyframes planeActive {
+    0% {
+        bottom: 0;
+        right: -3px;
+        transform: rotateZ(0);
+    }
+    5.88% {
+        bottom: 10px;
+        right: -9px;
+        transform: rotateZ(-0.0588turn);
+    }
+    11.76% {
+        bottom: 47px;
+        right: -18px;
+        transform: rotateZ(-0.1176turn);
+    }
+    17.64% {
+        bottom: 72px;
+        right: -9px;
+        transform: rotateZ(-0.1764turn);
+    }
+    23.52% {
+        bottom: 89px;
+        right: -3px;
+        transform: rotateZ(-0.2352turn);
+    }
+    29.41% {
+        bottom: 99px;
+        right: 9px;
+        transform: rotateZ(-0.2941turn);
+    }
+    35.29% {
+        bottom: 109px;
+        right: 45px;
+        transform: rotateZ(-0.3529turn);
+    }
+    41.17% {
+        bottom: 99px;
+        right: 72px;
+        transform: rotateZ(-0.4117turn);
+    }
+    47.05% {
+        bottom: 89px;
+        right: 88px;
+        transform: rotateZ(-0.4705turn);
+    }
+    52.94% {
+        bottom: 72px;
+        right: 92px;
+        transform: rotateZ(-0.5294turn);
+    }
+    58.82% {
+        bottom: 47px;
+        right: 99px;
+        transform: rotateZ(-0.5882turn);
+    }
+    64.7% {
+        bottom: 10px;
+        right: 93px;
+        transform: rotateZ(-0.647turn);
+    }
+    70.58% {
+        bottom: 0;
+        right: 88px;
+        transform: rotateZ(-0.7058turn);
+    }
+    76.47% {
+        bottom: -8px;
+        right: 72px;
+        transform: rotateZ(-0.7647turn);
+    }
+    82.35% {
+        bottom: -18px;
+        right: 45px;
+        transform: rotateZ(-0.8235turn);
+    }
+    88.23% {
+        bottom: -9px;
+        right: 9px;
+        transform: rotateZ(-0.8823turn);
+    }
+    94.11% {
+        bottom: -2px;
+        right: 0;
+        transform: rotateZ(-0.9411turn);
+    }
+    100% {
+        bottom: 0;
+        right: -3px;
+        transform: rotateZ(-1turn);
+    }
+}*/
+
+@keyframes tvFlip {
+    0% {transform: translate(0,0) rotateZ(0);}
+    10% {transform: translate(0,-5px) rotateZ(-0.1turn);}
+    20% {transform: translate(5px,-7px) rotateZ(-0.2turn);}
+    30% {transform: translate(9px,-12px) rotateZ(-0.3turn);}
+    40% {transform: translate(5px,-7px) rotateZ(-0.4turn);}
+    50% {transform: translate(0,-5px) rotateZ(-0.5turn);}
+    60% {transform: translate(0,0) rotateZ(-0.6turn);}
+    70% {transform: translate(0,3px) rotateZ(-0.7turn);}
+    80% {transform: translate(0,5px) rotateZ(-0.8turn);}
+    90% {transform: translate(0,3px) rotateZ(-0.9turn);}
+    100% {transform: translate(0,1px) rotateZ(-1turn);}
+}
+@keyframes phialShake {
+    10% {transform: translateY(-20px) rotateZ(0);}
+    12.8% {transform: translate(5px,-20px) rotateZ(-0.09turn);}
+    15.7% {transform: translate(12px,-25px) rotateZ(-0.18turn);}
+    18.6% {transform: translate(5px,-20px) rotateZ(-0.09turn);}
+    21.4% {transform: translate(0,-20px) rotateZ(0turn);}
+    24.3% {transform: translate(-5px,-20px) rotateZ(0.09turn);}
+    27.2% {transform: translate(-12px,-25px) rotateZ(0.18turn);}
+    30% {transform: translate(-5px,-20px) rotateZ(0.09turn);}
+    32.8% {transform: translate(5px,-20px) rotateZ(-0.09turn);}
+    35.7% {transform: translate(12px,-25px) rotateZ(-0.18turn);}
+    38.6% {transform: translate(5px,-20px) rotateZ(-0.09turn);}
+    41.4% {transform: translate(0,-20px) rotateZ(0turn);}
+    44.3% {transform: translate(-5px,-20px) rotateZ(0.09turn);}
+    47.2% {transform: translate(-12px,-25px) rotateZ(0.18turn);}
+    50% {transform: translate(-5px,-20px) rotateZ(0.09turn);}
+    52.8% {transform: translate(5px,-20px) rotateZ(-0.09turn);}
+    55.7% {transform: translate(12px,-25px) rotateZ(-0.18turn);}
+    58.6% {transform: translate(5px,-20px) rotateZ(-0.09turn);}
+    61.4% {transform: translate(0,-20px) rotateZ(0turn);}
+    64.3% {transform: translate(-5px,-20px) rotateZ(0.09turn);}
+    67.2% {transform: translate(-12px,-25px) rotateZ(0.18turn);}
+    95% {transform: translate(0,-15px) rotateZ(0);}
+}
+@keyframes phialFlip {
+    0% {transform: translate(0,0) rotateZ(0);}
+    10% {transform: translate(0,-5px) rotateZ(-0.2turn);}
+    20% {transform: translate(5px,-7px) rotateZ(-0.4turn);}
+    30% {transform: translate(9px,-12px) rotateZ(-0.6turn);}
+    40% {transform: translate(5px,-7px) rotateZ(-0.8turn);}
+    50% {transform: translate(0,-5px) rotateZ(-1turn);}
+    60% {transform: translate(0,0) rotateZ(-1.2turn);}
+    70% {transform: translate(0,3px) rotateZ(-1.4turn);}
+    80% {transform: translate(0,5px) rotateZ(-1.6turn);}
+    90% {transform: translate(0,3px) rotateZ(-1.8turn);}
+    100% {transform: translate(0,0) rotateZ(-2turn);}
+}
+@keyframes moveTea {
+    0% {transform: translate(0,0);}
+    35% {transform: translateX(15px);}
+    50% {transform: translateX(5px);}
+    75% {transform: translateX(-5px);}
+    100% {transform: translate(5px,-5px);}
+}
+@keyframes drinkTea {
+    0% {transform: translate(5px,-5px) rotateZ(0);}
+    20% {transform: translate(5px,-12px) rotateZ(-0.1turn);}
+    40% {transform: translate(9px,-22px) rotateZ(-0.12turn);}
+    60% {transform: translate(12px,-34px) rotateZ(-0.15turn);}
+    80% {transform: translate(15px,-40px) rotateZ(-0.17turn);}
+    90% {transform: translate(18px,-48px) rotateZ(-0.2turn);}
+    90% {transform: translate(5px,-5px) rotateZ(0);}
+}
+@keyframes planeFarewell {
+    0% {background-position: center;}
+    50% {background-position: 33px -18px;}
+    50.1% {background-position: 100px 18px;}
+    50.2% {background-position: -33px 50px;}
+    100% {background-position: center;}
+}
+@keyframes planeFlip {
+    0% {bottom: 0;right: 0; transform: rotateZ(0);}
+    7% {transform: translate(14px,-16px) rotateZ(-0.07turn);}
+    15% {transform: translate(21px,-55px) rotateZ(-0.15turn);}
+    22% {transform: translate(14px,-93px) rotateZ(-0.22turn);}
+    30% {transform: translate(0px,-109px) rotateZ(-0.30turn);}
+    37% {transform: translate(-35px,-117px) rotateZ(-0.37turn);}
+    45% {transform: translate(-70px,-109px) rotateZ(-0.45turn);}
+    52% {transform: translate(-85px,-93px) rotateZ(-0.52turn);}
+    60% {transform: translate(-92px,-55px) rotateZ(-0.60turn);}
+    67% {transform: translate(-85px,-16px) rotateZ(-0.67turn);}
+    75% {transform: translate(-70px,0) rotateZ(-0.75turn);}
+    82% {transform: translate(-35px,8px) rotateZ(-0.82turn);}
+    100% {transform: translate(0,0) rotateZ(-1turn);}
+}
+.partner-card:nth-child(1) > picture:hover::after {animation: tvFlip 1s;}
+.partner-card:nth-child(1) > picture:active::after {animation: tvFlip 0.5s infinite;}
+.partner-card:nth-child(2) > picture:hover::after {animation: phialShake 3s;}
+.partner-card:nth-child(2) > picture:active::after {animation: phialFlip 1s infinite;}
+.partner-card:nth-child(3) > picture:hover::after {animation: moveTea 1s;}
+.partner-card:nth-child(3) > picture:active::after {animation: drinkTea 1s;}
+.partner-card:nth-child(4) > picture:hover::after {animation: planeFarewell 1.5s ease-in-out 1;}
+.partner-card:nth-child(4) > picture:active::after {animation: planeFlip 1s infinite;}
+/*MEDIA BRAKE POINTS*/
+@media screen  and (min-width: 320px) and (max-width: 340px) {
+    .content-page,
+    header {
+        width: 100%;}
+}
 
 @media screen and (min-width: 768px) {
     body {background: #1a1915 url("../img/background/background-tablet.png") no-repeat top left;}
@@ -218,15 +442,17 @@ header {
     .partner-card:nth-child(4) {order: 3;}
 }
 
+@media screen  and (min-width: 768px) and (max-width: 788px) {
+    header {
+        width: 100%;}
+}
+
+
 @media screen  and (min-width: 940px) {
     body {background: #1a1915 url("../img/background/background-desktop.png") no-repeat top;}
     main {padding-bottom: 72px;}
 
-    /*HEADER*/
-    header {
-        width: 940px;
-    }
-
+    header,
     .content-page,
     .partner-list {
         width: 940px;
@@ -236,3 +462,18 @@ header {
         width: 220px;
     }
 }
+
+@media screen  and (min-width: 940px) and (max-width: 959px) {
+    header,
+    .content-page,
+    .partner-list {
+        width: 100%;
+    }
+}
+
+@media screen  and (min-width: 1440px) {
+    body {
+        background-size: contain;
+    }
+}
+
