--- a/html-css/module-10/css/styles.css
+++ b/html-css/module-10/css/styles.css
@@ -18,231 +18,425 @@ input[type="radio"].visually-hidden {
     overflow: hidden;
 }
 
-ul {
+.body {
+    font-family: "Montserrat", sans-serif;
+}
+
+.list {
     margin: 0;
     padding: 0;
     list-style: none;
 }
 
-a, a:hover {
-    text-decoration: none;
-    transition: all 1s;
-}
-
-body {
-    background: #1a1915 url("../img/background/background-mobile.png") no-repeat top center;
-    font-family: "Monserrat", sans-serif;
-    font-weight: bold;
-}
-
-main {
-    background-color: #ffffff;
-    padding-bottom: 56px;
-}
+.link {text-decoration: none;}
+.link, .btn, .btn--nav-bar {cursor: pointer;}
 
 /*HEADER*/
 
-header {
-    width: 320px;
-    height: 540px;
-    margin: 0 auto;
-    color: #ffffff;
-    text-align: center;
-}
-
-.nav-list {
-    padding-top: 18px;
-    display: flex;
-    justify-content: center;
-    margin-bottom: 116px;
-}
-
-.nav-list a {
-    display: inline-block;
+.header {
     box-sizing: border-box;
-    width: 90px;
-    height: 36px;
-    padding-top: 4px;
-    border: 2px solid transparent;
-    color: #ffffff;
-    border-radius: 18px;
-}
-
-.nav-list__item:nth-child(2) a {
-    border-color: #ffffff;
-}
-
-.logo {
-    display: block;
-    margin-bottom: 38px;
-    font-size: 20px;
+    height: 1000px;
+    margin-bottom: 46px;
+    padding-top: 28px;
+    background: linear-gradient(to top, rgba(252, 227, 138, .9) 0%, rgba(243, 129, 129, .9) 100%), url("../img/background/background.jpg") center no-repeat;
     color: #ffffff;
 }
 
-.nav-bar + h2 {
-    margin: 0 auto 19px;
-    font-size: 30px;
+.nav-bar,
+.nav-bar__menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.nav-bar {
+    width: 1200px;
+    margin: 0 auto 160px;
+}
+
+.nav-bar__menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    min-width: 630px;
+}
+
+.nav-bar__item {
+    padding-top: 13px;
+}
+.nav-bar__item, .nav-bar__item--btn {
+    display: flex;
+    align-items: center;
     text-transform: uppercase;
 }
 
-.nav-bar + h2 + p {
-    margin: 0 auto 19px;
-    font-size: 18px;
-    font-family: "Roboto";
-}
-
-.go-link {
-    display: block;
-    box-sizing: border-box;
-    width: 280px;
-    height: 40px;
-    margin: 0 auto 105px;
-    padding-top: 6px;
-    border: 2px solid transparent;
-    border-radius: 20px;
-    background-color: #ff4d4f;
-    text-align: center;
-    color: #ffffff;
-}
-
-header a:hover {color: #ff4d4f; }
-.nav-list__item:nth-child(2) a:hover, .go-link:hover {border-color: #ff4d4f;}
-a.go-link:hover {background-color: #ffffff;}
-a.see-more:hover {
-    background-color: #FF4E50;
-    color: #ffffff;
-}
-
-/*CONTENT-PAGE*/
-
-.content-page {
-    padding-top: 54px;
-    text-align: center;
-}
-
-.content-page h2 {
-    margin-bottom: 30px;
-    font-size: 22px;
-}
-
-.partner-card img {
-    border-radius: 50%;
-}
-
-.partner-card h3 {
-    margin: 14px auto;
-    font-size: 14px;
-}
-
-.partner-card p {
-    font-family: "Roboto";
-}
-
-.see-more {
-    display: block;
-    box-sizing: border-box;
-    width: 280px;
-    height: 40px;
-    margin: 0 auto;
-    padding-top: 6px;
-    border-radius: 20px;
-    background-color: transparent;
-    border: 2px solid #ff4d4f;
-    color: #FF4E50;
-}
-.partner-card picture,
-.partner-card picture::after,
-.partner-card img {
-    position: relative;
-    transition: all 1s;
-}
-.partner-card picture::after {
+.nav-bar__link::after,
+.nav-bar__item--btn::after {
     content: '';
     display: block;
-    position: absolute;
-    bottom: -58px;
-    right: 0;
+}
+
+.nav-bar__item:hover .nav-bar__link::after {background: #fce38a;}
+
+.nav-bar__link {
+    display: inline-block;
+    min-width: 80px;
+    font-size: 14px;
+    color: #ffffff;
+    text-align: center;
+    vertical-align: center;
+}
+
+.nav-bar__link::after {
+    width: 50px;
+    height: 3px;
+    margin: 10px auto 0;
+}
+
+.btn--nav-bar {
+    margin: 0;
     width: 33px;
     height: 33px;
-    border: 3px solid #ffffff;
+    border: none;
+    font-size: 0;
+    background-color: transparent;
+}
+
+.nav-bar__item--btn:nth-last-child(2) .btn--nav-bar {
+    background: url("../img/icons/svg/cart.svg") no-repeat center;
+}
+
+.nav-bar__item--btn:nth-last-child(1) .btn--nav-bar {
+    background: url("../img/icons/svg/lens.svg") no-repeat center;
+}
+
+.nav-bar__logo {
+    font-size: 30px;
+    color: #ffffff;
+}
+.nav-bar__logo, .greeting, .section-title, .subscribe__submit, .member-card__title {
+    font-weight: bold;
+}
+
+.nav-bar__item:hover .nav-bar__link, .nav-bar__logo:hover {color: #fce38a;}
+
+.greeting {
+    margin: 0 auto 60px;
+    font-size: 150px;
+    color: #ffffff;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.greeting--first-line {
+    margin: 0;
+    font-size: 72px;
+    font-family: "Kaushan Script";
+    text-align: center;
+    text-transform: none;
+}
+
+.cta {
+    display: block;
+    width: 164px;
+    height: 44px;
+    margin: auto;
+    border: solid 3px #ffffff;
+    background-color: transparent;
+    color: #ffffff;
+    text-transform: uppercase;
+}
+
+.cta:hover {
+    color: #e88482;
+    border-color: #e88482;
+    background-color: #eab894;
+}
+/*FEATURES*/
+
+.features {
+    width: 1200px;
+    margin: 0 auto;
+}
+
+.section-title {
+    margin: 0 auto 60px;
+    font-size: 30px;
+    color: rgb(51, 51, 51);
+    text-align: center;
+    text-transform: uppercase;
+    }
+
+.section-title--first-line {
+    margin: 0;
+    font-size: 24px;
+    color: rgb(51, 51, 51);
+    font-family: "Kaushan Script";
+    text-align: center;
+    text-transform: none;
+}
+
+.section-title::after {
+    display: block;
+    content: '';
+    width: 60px;
+    height: 3px;
+    background-color: #f38181;
+    margin: 40px auto;
+}
+
+.features-list {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.features-list__item {
+    position: relative;
+    box-sizing: border-box;
+    width: 330px;
+    padding-left: 60px;
+}
+
+.features-list__item:nth-last-child(-n + 3) {
+    margin-bottom: 100px;
+}
+
+.features-list__item::before {
+    content: '';
+    display: block;
+    width: 33px;
+    height: 33px;
+    position: absolute;
+    top: 14px;
+    left: 15px;
+    background: no-repeat center;
+}
+
+.features-list__item:nth-child(1)::before {
+    background-image: url("../img/icons/svg/clock.svg");
+    width: 32px;
+    height: 32px;
+}
+
+.features-list__item:nth-child(2)::before {
+    background-image: url("../img/icons/svg/graph.svg");
+    width: 33px;
+    height: 33px;
+}
+
+.features-list__item:nth-child(3)::before {
+    background-image: url("../img/icons/svg/computer.svg");
+    width: 32px;
+    height: 29px;
+}
+
+.features-list__item:nth-child(4)::before {
+    background-image: url("../img/icons/svg/book.svg");
+    width: 32px;
+    height: 32px;
+}
+
+.features-list__item:nth-child(5)::before {
+    background-image: url("../img/icons/svg/home.svg");
+    width: 32px;
+    height: 31px;
+}
+
+.features-list__item:nth-child(6)::before {
+    background-image: url("../img/icons/svg/frame.svg");
+    width: 34px;
+    height: 32px;
+}
+
+.features-list__item:not(:nth-last-child(-n + 3)) {
+    margin-bottom: 100px;
+}
+
+.features-item__title {
+    font-size: 14px;
+    color: rgb(51, 51, 51);
+    text-transform: uppercase;
+}
+
+.features-item__desc {
+    font-size: 15px;
+    line-height: 24px;
+    color: rgb(153, 153, 153);
+    font-family: "Roboto";
+}
+
+/*ABUOT*/
+
+.about {
+    width: 1200px;
+    margin: 0 auto;
+}
+
+.about__desc {
+    width: 930px;
+    margin: 0 auto 90px;
+    font-size: 15px;
+    line-height: 24px;
+    color: rgb(153, 153, 153);
+    font-family: "Roboto";
+    text-align: center;
+}
+
+.team-list {
+    display: flex;
+    justify-content: space-between;
+}
+
+.member-card__wrapper {
+    position: relative;
+    height: 470px;
+}
+
+.member-card:hover .member-card__wrapper {
+    transform: translate(-10px, -10px);
+    box-shadow: #95e1d3 10px 10px;
+}
+
+.member-card:hover .socials {
+    opacity: 1;
+}
+
+.socials {
+    display: flex;
+    box-sizing: border-box;
+    align-items: flex-start;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 380px;
+    height: 470px;
+    padding: 200px 80px;
+
+    background: linear-gradient(to top, rgba(251, 227, 137, 0.9), rgba(243, 129, 129, 0.9));
+    opacity: 0;
+    font-size: 0;
+}
+
+.socials__link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    width: 56px;
+    height: 56px;
+    background: #fce38a;
+}
+
+.socials__item:nth-child(-n + 3) .socials__link {
+    border-right: 1px solid #f9bd86;
+}
+
+.socials__item:hover:nth-child(-n + 3) .socials__link {
+    border-right: 1px solid #b9bcb3;
+}
+
+.socials__item:hover .socials__link {
+    background: #95e1d3;
+}
+
+.socials__icon {
+
+    fill: rgb(243, 129, 129)
+}
+.socials__item:hover .socials__icon {
+    fill: #ffffff;
+}
+
+
+
+.member-card__title {
+    font-size: 14px;
+    color: rgb(51, 51, 51);
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.member-card__post {
+    font-size: 15px;
+    line-height: 24px;
+    color: rgb(153, 153, 153);
+    font-family: "Roboto";
+    font-style: italic;;
+    text-align: center;
+}
+
+/*FOOTER*/
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 1200px;
+    height: 70px;
+    margin: auto;
+    border-top: 1px solid #e5e5e5;
+}
+
+.copy {
+    font-size: 14px;
+    text-align: center;
+    color: #333333;
+}
+
+.copy__link {
+    color: #f38181;
+}
+
+.subscribe {
+    display: flex;
+}
+
+.subscribe__email {
+    box-sizing: border-box;
+    width: 230px;
+    height: 40px;
+    background-color: #ffffff;
+    border: 1px solid #e7e7e7;
+    font-family: "Roboto";
+    font-style: italic;
+    font-size: 15px;
+    line-height: 24px;
+    color: #cccccc;
+}
+
+.subscribe__submit {
+    width: 150px;
+    height: 40px;
+    background: #95e1d3;
+    border: none;
+    font-size: 14px;
+    color: #ffffff;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+/*BACK HOME*/
+
+.back-button {
+    text-decoration: none;
+    color: #b0b8b9;
+    position: fixed;
+    bottom: 50px;
+    right: 50px;
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
-}
-.partner-card:nth-child(1) picture::after {background: #ff4e50 url("../img/icons/tv.svg") no-repeat center;}
-.partner-card:nth-child(2) picture::after {background: #ffa407 url("../img/icons/flask.svg") no-repeat center;}
-.partner-card:nth-child(3) picture::after {background: #1bd7ad url("../img/icons/cup.svg") no-repeat center;}
-.partner-card:nth-child(4) picture::after {background: #4e72db url("../img/icons/plane.svg") no-repeat center;}
-
-/*MEDIA BRAKE POINTS*/
-
-@media screen and (max-width: 767px){
-    .content-page {
-        max-width: 320px;
-        width: 320px;
-    }
+    background-color: #555555;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12), 0 3px 1px -2px rgba(0, 0, 0, .2);
+    text-align: center;
+    line-height: 60px;
+    z-index: 1000;
 }
 
-@media screen  and (min-width: 320px) and (max-width: 340px) {
-    .content-page,
-    header {
-        max-width: 100%;
-        width: 100%;}
+.back-button:hover {
+    background-color: #717171;
+    color: #ffffff;
 }
-
-@media screen and (min-width: 768px) {
-    body {
-        background: #1a1915 url("../img/background/background-tablet.png") no-repeat top left;
-    }
-
-    main {
-        padding-bottom: 39px;
-    }
-
-    header {
-        width: 768px;
-        height: 700px;
-    }
-
-    .nav-bar {
-        display: flex;
-        flex-direction: row-reverse;
-        justify-content: space-between;
-        align-items: flex-start;
-        padding: 46px 49px 0;
-    }
-
-    .nav-list {
-        padding-top: 0;
-    }
-
-    .nav-bar + h2 {
-        font-size: 52px;
-    }
-
-    .nav-bar + h2 + p {
-        font-size: 24px;
-    }
-
-    .partner-list {
-        margin-bottom: 14px;
-    }
-}
-
-
-@media screen  and (min-width: 768px) and (max-width: 788px) {
-    header {width: 100%;}
-}
-
-@media screen  and (min-width: 940px) {
-    body {background: #1a1915 url("../img/background/background-desktop.png") no-repeat top;}
-    main {padding-bottom: 72px;}
-    header {width: 940px;}
-}
-
-@media screen  and (min-width: 940px) and (max-width: 959px) {
-    header {width: 100%;}
-}
-
-@media screen  and (min-width: 1440px) {
-    body {background-size: contain;}
-}
-
