--- a/html-css/module-11/src/scss/styles.scss
+++ b/html-css/module-11/src/scss/styles.scss
@@ -17,3 +17,8 @@
 @import "sections/about";
 @import "sections/features";
 @import "sections/footer";
+
+/*
+   Import blocks below
+*/
+@import "blocks/socials";
